# rx-gain-viewer

./: .gitignore  BUILD_GUIDE.md  CLAUDE.md  PHASE1_VALIDATION.md  PROJECT_STRUCTURE.md  README.md  RFConverter.spec  build.py  build_simple.py  create_simple_icon.py  pyproject.toml  requirements.txt  rf_converter.spec  version_info.txt
.claude/: settings.local.json
data/: X_ANT1_B1@1_(G0).s2p  X_ANT1_B1@1_(G0H).s2p  X_ANT1_B1@1_(G2).s2p  X_ANT1_B1@1_(G3).s2p  X_ANT1_B1@1_(G5).s2p  X_ANT1_B1@2_(G0).s2p  X_ANT1_B1@2_(G2).s2p  X_ANT1_B1@2_(G3).s2p  X_ANT1_B1@3_(G0).s2p  X_ANT1_B1@3_(G0H).s2p  X_ANT1_B1@3_(G1).s2p  X_ANT1_B1@3_(G3).s2p  X_ANT1_B1@3_(G4).s2p  X_ANT1_B1@3_(G5).s2p  X_ANT1_B1@4_(G0H).s2p  X_ANT1_B1@4_(G4).s2p  X_ANT1_B1[B41]@1_(G0H).s2p  X_ANT1_B1[B41]@1_(G2).s2p  X_ANT1_B1[B41]@1_(G4).s2p  X_ANT1_B1[B41]@1_(G5).s2p  X_ANT1_B1[B41]@2_(G0).s2p  X_ANT1_B1[B41]@2_(G0H).s2p  X_ANT1_B1[B41]@2_(G3).s2p  X_ANT1_B1[B41]@2_(G5).s2p  X_ANT1_B1[B41]@3_(G0H).s2p  X_ANT1_B1[B41]@3_(G4).s2p  X_ANT1_B1[B41]@4_(G0H).s2p  X_ANT1_B1[B41]@4_(G2).s2p  X_ANT1_B1[B41]@4_(G3).s2p  X_ANT1_B1[B41]@4_(G5).s2p  X_ANT1_B1[B7]@1_(G0).s2p  X_ANT1_B1[B7]@1_(G1).s2p  X_ANT1_B1[B7]@1_(G2).s2p  X_ANT1_B1[B7]@1_(G5).s2p  X_ANT1_B1[B7]@2_(G0).s2p  X_ANT1_B1[B7]@2_(G0H).s2p  X_ANT1_B1[B7]@3_(G0).s2p  X_ANT1_B1[B7]@3_(G0H).s2p  X_ANT1_B1[B7]@3_(G4).s2p  X_ANT1_B1[B7]@4_(G0).s2p  (+3 more)
docs/: actual-filename-format.md  csv-format-analysis.md  filename-rules.md  project-discussion.md  quickstart.md  rf-converter-development-log.md  session-2025-10-02.md  session-2025-10-03-part1.md  session-2025-10-06.md  (+4 more)
(+115 files in other folders)
