[project]
name = "rf-converter"
version = "1.0.0"
description = "RF S-parameter to CSV Converter with 3GPP Band Mapping"
authors = [
    {name = "RF Engineering Team"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scikit-rf>=0.29.0",
    "pandas>=2.1.0",
    "numpy>=1.25.0",
    "plotly>=5.17.0",
    "pyqt6>=6.10.0",
    "pyinstaller>=6.17.0",
    "pillow>=11.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "ruff>=0.0.292",
]
pdf = [
    "weasyprint>=60.0",
]
image = [
    "kaleido>=0.2.1",
]
django = [
    "Django>=5.0,<6.0",
    "django-htmx>=1.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rf_converter", "prototype", "django_test"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["prototype/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
